<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="description_search_icon">Search icon</string>
    <string name="description_add_image_icon">Add image icon</string>
    <string name="description_add_website_link_icon">Add website link icon</string>
    <string name="description_add_a_note_icon">Add a note icon</string>
    <string name="description_back_icon">Back icon</string>
    <string name="description_done_icon">Done icon</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here..</string>
    <string name="toast_title_empty">Note title can\'t be empty</string>
    <string name="toast_note_empty">Note can\'t be empty</string>
    <string name="miscellaneous">More options</string>
    <string name="pick_color">Pick color</string>
    <string name="description_image_of_note">Image of note</string>
    <string name="add_image">Add image</string>
    <string name="toast_permission_denied">Permission denied</string>
    <string name="toast_something_wrong">Something wrong happened</string>
    <string name="add_url">Add URL</string>
    <string name="description_add_url_icon">Add url icon</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="toast_empty_url">URL can\'t be empty</string>
    <string name="toast_invalid_url">URL is invalid</string>
    <string name="description_delete_icon">Delete icon</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_confirm_question">Are you sure you want to delete this note?</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="change_url">Change URL</string>
    <string name="change_image">Change image</string>
    <string name="save_note">Save note</string>
    <string name="save_confirm_question">Unsaved note, are you sure you want to leave?</string>
    <string name="leave">Leave</string>
    <string name="description_open_icon">Open icon</string>
    <string name="description_more_icon">More icon</string>
</resources>