<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_unsaved_note_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/layout_unsaved_note_ivSaveNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/description_delete_icon"
        android:src="@drawable/ic_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite" />

    <TextView
        android:id="@+id/layout_unsaved_note_tvDeleteNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:fontFamily="@font/segoe_ui_bold"
        android:includeFontPadding="false"
        android:text="@string/save_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@id/layout_unsaved_note_ivSaveNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layout_unsaved_note_ivSaveNote"
        app:layout_constraintTop_toTopOf="@id/layout_unsaved_note_ivSaveNote" />

    <TextView
        android:id="@+id/layout_unsaved_note_tvSaveMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="@dimen/_3sdp"
        android:text="@string/save_confirm_question"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/layout_unsaved_note_ivSaveNote" />

    <TextView
        android:id="@+id/layout_unsaved_note_tvLeave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/leave"
        android:textAllCaps="true"
        android:textColor="@color/colorDelete"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_unsaved_note_tvSaveMessage"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/layout_unsaved_note_tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layout_unsaved_note_tvLeave"
        app:layout_constraintTop_toBottomOf="@id/layout_unsaved_note_tvSaveMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>