<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/activity_main_tvMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/activity_main_llSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/activity_main_tvMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/description_search_icon"
            android:src="@drawable/ic_search"
            app:tint="@color/colorSearchIcon" />

        <EditText
            android:id="@+id/activity_main_etInputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_notes"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_main_rvNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_2sdp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/activity_main_llQuickActions"
        app:layout_constraintTop_toBottomOf="@id/activity_main_llSearch" />

    <LinearLayout
        android:id="@+id/activity_main_llQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorQuickActionBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/activity_main_ivAddNote"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/description_add_a_note_icon"
            android:src="@drawable/ic_add_outline"
            app:tint="@color/colorIcon" />

        <ImageView
            android:id="@+id/activity_main_ivAddImage"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/description_add_image_icon"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcon" />

        <ImageView
            android:id="@+id/activity_main_ivAddWebLink"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:contentDescription="@string/description_add_website_link_icon"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcon" />

    </LinearLayout>

    <ImageView
        android:id="@+id/activity_main_ivAddNoteMain"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/description_add_a_note_icon"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@id/activity_main_llQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/activity_main_llQuickActions"
        app:tint="@color/colorPrimary" />


</androidx.constraintlayout.widget.ConstraintLayout>