<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_miscellaneous_llMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_44sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:id="@+id/layout_miscellaneous_llOpenMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_3sdp"
            android:layout_marginHorizontal="@dimen/_132sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/pull_action_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:fontFamily="@font/segoe_ui_bold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/miscellaneous"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_miscellaneous_llNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/layout_miscellaneous_vColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_1" />

            <ImageView
                android:id="@+id/layout_miscellaneous_ivColor1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/description_done_icon"
                android:paddingVertical="@dimen/_10sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/layout_miscellaneous_vColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_2" />

            <ImageView
                android:id="@+id/layout_miscellaneous_ivColor2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/description_done_icon"
                android:paddingVertical="@dimen/_10sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/layout_miscellaneous_vColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_3" />

            <ImageView
                android:id="@+id/layout_miscellaneous_ivColor3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/description_done_icon"
                android:paddingVertical="@dimen/_10sdp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/layout_miscellaneous_vColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_4" />

            <ImageView
                android:id="@+id/layout_miscellaneous_ivColor4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/description_done_icon"
                android:paddingVertical="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                tools:ignore="ImageContrastCheck" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/layout_miscellaneous_vColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/background_note_color_5" />

            <ImageView
                android:id="@+id/layout_miscellaneous_ivColor5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/description_done_icon"
                android:paddingVertical="@dimen/_10sdp"
                app:tint="@color/colorWhite"
                tools:ignore="ImageContrastCheck" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:includeFontPadding="false"
            android:text="@string/pick_color"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_13ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_miscellaneous_llAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/description_add_image_icon"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcon" />

        <TextView
            android:id="@+id/layout_miscellaneous_tvAddImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/segoe_ui_bold"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/colorIcon"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_miscellaneous_llAddUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/description_add_image_icon"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcon" />

        <TextView
            android:id="@+id/layout_miscellaneous_tvAddUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/segoe_ui_bold"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textColor="@color/colorIcon"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_miscellaneous_llDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/description_add_image_icon"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/segoe_ui_bold"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/colorDelete"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>